# GoodNewsEpaperDisplay

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  main.py  migrate_data.py  omni-epd.ini  pyproject.toml  requirements.txt  test_pattern.py
epaper_goodnews/: __init__.py  config.py  display_controller.py  headline.py  image_pipeline.py  job_manager.py  models.py  pipeline.py  positivity.py  rss_service.py  scheduler.py  storage.py
epaper_goodnews/web/: __init__.py  app.py
epaper_goodnews/web/templates/: history.html  index.html
stubs/it8951/: pyproject.toml
